# local_hood

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 001_cities.sql  002_users.sql  003_addresses.sql  004_complexes.sql  005_apartments.sql  006_osi.sql  007_security.sql  008_announcements.sql  009_marketplace.sql  010_voting.sql  011_communal.sql  012_notifications.sql  013_chat.sql  014_maintenance.sql  015_admin_logs.sql
src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
src/api/: addresses.rs  admin.rs  announcements.rs  apartments.rs  auth.rs  chat.rs  cities.rs  communal.rs  complexes.rs  maintenance.rs  marketplace.rs  mod.rs  notifications.rs  osi.rs  security.rs  users.rs  voting.rs
src/middleware/: auth.rs  mod.rs
src/models/: address.rs  announcement.rs  apartment.rs  chat.rs  city.rs  communal.rs  complex.rs  maintenance.rs  marketplace.rs  mod.rs  notification.rs  osi.rs  security.rs  user.rs  voting.rs
src/services/: auth_service.rs  barrier_service.rs  file_service.rs  mod.rs  sms_service.rs
src/utils/: mod.rs  validators.rs
