[package]
name = "localhood-backend"
version = "0.1.0"
edition = "2021"
authors = ["LocalHood Team"]
description = "Backend API for LocalHood - residential complex management platform"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate", "rust_decimal"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for SMS, etc.)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1"
once_cell = "1"

# Decimal
rust_decimal = { version = "1", features = ["db-postgres", "serde"] }

# MinIO/S3
aws-sdk-s3 = "1"
aws-config = "1"

# Random generation
rand = "0.8"

# QR code
qrcode = "0.14"
image = "0.25"
base64 = "0.22"

# OpenAPI/Swagger
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

[dev-dependencies]
tokio-test = "0.4"
